tests/fixtures/invalid/pow_bool_bytes_int.py
# Cannot call pow() with Bool, Bytes, Int
x = pow(True, b"hello", 1)
